@@ -1,5 +1,9 @@
 File Name: CHANGES
 
+07/03/2012 FASP 1.0.2:
+- Modify the interface of Schwarz to make it consistent with AMG and ILU.
+- Update a few OMP routines. 
+
 06/27/2012 FASP 1.0.1:
 - Fix a few GCC warnings and Doxygen warnings.
 - Update documentation.
